--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,15 +1,15 @@
-// .wrapper {
-//   font-family: Arial, Helvetica, sans-serif;
-//   max-width: 1440px;
-//   height: 100vh;
-//   margin: 0 auto;
-//   display: flex;
-//   flex-direction: column;
-// }
+.wrapper {
+  font-family: Arial, Helvetica, sans-serif;
+  max-width: 1440px;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
 
-// .main {
-//   flex: 1 1 auto;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+.main {
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
