--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,3 +1,22 @@
+html {
+  scrollbar-gutter: stable both-edges;
+  scrollbar-width: thin;
+}
+
+html::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+html::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #e9ecef;
+}
+
 .wrapper {
   font-family: Arial, Helvetica, sans-serif;
   max-width: 1440px;
