--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
 @import '../utils/libs/normalize.css';
 @import '../app/App.scss';
-@import '../layout/footer/Footer.scss';
+@import '../components/footer/Footer.scss';
 @import './fonts.scss';
