--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -29,5 +29,5 @@ html::-webkit-scrollbar-thumb {
   flex: 1 1 auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
