--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -10,6 +10,7 @@
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Montserrat';
   src: url('../assets/fonts/Montserrat-Regular.woff2') format('woff2');
@@ -17,10 +18,19 @@
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Montserrat';
   src: url('../assets/fonts/Montserrat-Bold.woff2') format('woff2');
   src: url('../assets/fonts/Montserrat-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/Montserrat-ExtraLightItalic.woff2') format('woff2');
+  src: url('../assets/fonts/Montserrat-ExtraLightItalic.woff') format('woff');
+  font-weight: 200;
+  font-style: italic;
 }
