--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,17 +1,17 @@
-html {
+body {
   scrollbar-width: thin;
 }
 
-html::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
 
-html::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
-html::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: #e9ecef;
 }
