--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,17 +1,17 @@
-body {
+html {
   scrollbar-width: thin;
 }
 
-body::-webkit-scrollbar {
+html::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
 
-body::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: #e9ecef;
 }
