feat: add promo on main, style main

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -22,8 +22,8 @@ html::-webkit-scrollbar-thumb {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding: 0;
-  position: relative;
 
   @media (max-width: 945px) {
     &.lock {
