--- a/src/pages/about-us/about.scss
+++ b/src/pages/about-us/about.scss
@@ -206,7 +206,7 @@ $colorNatasha: rgb(107, 234, 93);
   height: 90px;
   top: 30px;
   left: 150px;
-  animation: walk-Maxim 5s linear infinite;
+  animation: walk-Natasha 3s linear infinite;
   .human {
     background: $colorMaxim;
     height: 40px;
@@ -286,21 +286,6 @@ $colorNatasha: rgb(107, 234, 93);
   background: url(./icons/vika.png) center no-repeat;
 }
 
-@keyframes walk-Maxim {
-  25% {
-    transform: translate3d(0, 0, 0);
-  }
-  30% {
-    transform: translate3d(0, -10px, 0);
-  }
-  40% {
-    transform: translate3d(0, -25px, 0);
-  }
-  65% {
-    transform: translate3d(0, -35px, 0);
-  }
-}
-
 @keyframes walk-Natasha {
   25% {
     transform: translate3d(20px, 0, 0);
@@ -371,3 +356,174 @@ $colorNatasha: rgb(107, 234, 93);
 }
 
 //balls
+
+#rss-school {
+  position: relative;
+  width: 50px;
+  height: 90px;
+  top: 0;
+  left: 0;
+  animation: rss-School 3s linear infinite;
+  .human {
+    background: black;
+    height: 40px;
+    &:before {
+      background: black;
+    }
+    &:after {
+      border: 20px solid transparent;
+      border-top: 10px solid black;
+      content: '';
+      position: absolute;
+      top: 39px;
+      width: 50px;
+      height: 25px;
+      border-radius: 10%;
+      z-index: 100;
+    }
+    .mouse {
+      position: absolute;
+      top: 10px;
+      left: 23px;
+      width: 15px;
+      height: 10px;
+      box-sizing: border-box;
+      clip: rect(5px, 15px, 10px, 0);
+      border: 5px solid rgb(212, 70, 70);
+      border-radius: 50%;
+    }
+  }
+}
+
+@keyframes rss-School {
+  25% {
+    transform: translate3d(0, 0, 0);
+  }
+  30% {
+    transform: translate3d(0, -10px, 0);
+  }
+  40% {
+    transform: translate3d(0, -25px, 0);
+  }
+  65% {
+    transform: translate3d(0, -35px, 0);
+  }
+}
+
+@keyframes boll {
+  0% {
+    transform: translate3d(0, 0, -2px);
+  }
+  25% {
+    transform: translate3d(-5px, -5px, 0);
+  }
+  50% {
+    transform: translate3d(-2px, -12px, 0);
+  }
+  70% {
+    transform: translate3d(0, -22px, -5px);
+  }
+}
+
+.gitLinkNatasha {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: boll 6s linear infinite;
+  .gitHub {
+    width: 65px;
+    height: 65px;
+    background: url(./icons/github-65.png) no-repeat center;
+  }
+  &:after {
+    position: absolute;
+    top: 54px;
+    left: 58px;
+    content: '';
+    width: 0;
+    height: 125px;
+    border-left: 2px solid black;
+    transform: rotate(-25deg);
+  }
+}
+
+.gitLinkMaxim {
+  position: relative;
+  top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: boll 7s linear infinite;
+  .gitHub {
+    width: 55px;
+    height: 55px;
+    background: url(./icons/github-55.png) no-repeat center;
+  }
+  &:after {
+    position: absolute;
+    top: 50px;
+    content: '';
+    width: 0;
+    height: 97px;
+    border-left: 2px solid black;
+  }
+}
+
+.gitLinkVika {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: boll 5s linear infinite;
+  .gitHub {
+    width: 65px;
+    height: 65px;
+    background: url(./icons/github-65.png) no-repeat center;
+  }
+  &:after {
+    position: absolute;
+    top: 52px;
+    right: 59px;
+    content: '';
+    width: 0;
+    height: 120px;
+    border-left: 2px solid black;
+    transform: rotate(28deg);
+    z-index: 1;
+  }
+}
+
+.rss {
+  position: relative;
+  top: 5px;
+  width: 100px;
+  height: 100px;
+  background: url(./icons/bag.svg) no-repeat center;
+  z-index: 3;
+  &:before {
+    content: '';
+    position: absolute;
+    display: flex;
+    top: 33px;
+    left: 40px;
+    width: 20px;
+    height: 20px;
+    z-index: 3;
+    background: white;
+  }
+  &:after {
+    position: absolute;
+    display: flex;
+    top: 33px;
+    left: 20px;
+    content: '';
+    width: 63%;
+    height: 63%;
+    background: url(./icons/rs_school_js.svg) no-repeat center;
+    z-index: 3;
+  }
+}
