--- a/src/pages/about-us/about.scss
+++ b/src/pages/about-us/about.scss
@@ -1,7 +1,7 @@
-$humancolor: #ecb938;
-$colorVika: rgb(234, 119, 119);
-$colorMaxim: rgb(65, 80, 245);
-$colorNatasha: rgb(107, 234, 93);
+$humancolor: #654d10;
+$colorVika: rgba(21, 21, 21, 0.945);
+$colorMaxim: rgba(21, 21, 21, 0.945);
+$colorNatasha: rgba(21, 21, 21, 0.945);
 
 %lips {
   position: absolute;
@@ -24,7 +24,7 @@ $colorNatasha: rgb(107, 234, 93);
   width: 50px;
   height: 90px;
   top: 30px;
-  left: 130px;
+  left: 150px;
 }
 
 %photo {
@@ -150,7 +150,7 @@ $colorNatasha: rgb(107, 234, 93);
   top: 0;
   width: 10px;
   height: 10px;
-  background: #144d54;
+  background: #1c6c76;
   border-radius: 50%;
   animation: twinkle infinite 3s;
   &.left {
@@ -223,7 +223,7 @@ $colorNatasha: rgb(107, 234, 93);
     }
     &:after {
       border: 20px solid transparent;
-      border-top: 10px solid rgb(245, 68, 68);
+      border-top: 10px solid rgba(21, 21, 21, 0.945);
       content: '';
       position: absolute;
       top: 39px;
@@ -551,13 +551,7 @@ $colorNatasha: rgb(107, 234, 93);
 //responsib
 
 #black {
-  background-color: rgba(0, 0, 0, 0.905);
-  position: relative;
-  border-radius: 10px;
-  box-shadow: -1px 7px 12px 1px rgba(34, 60, 80, 0.2);
-}
-
-#black {
+  padding-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.905);
   position: relative;
   border-radius: 10px;
@@ -573,4 +567,7 @@ $colorNatasha: rgb(107, 234, 93);
     background: rgb(103, 119, 125);
     box-shadow: 0 -200px 100px -100px rgb(16, 17, 16) inset;
   }
+}
+
+.cards {
 }
