--- a/src/pages/about-us/about.scss
+++ b/src/pages/about-us/about.scss
@@ -1,7 +1,5 @@
 $humancolor: #654d10;
-$colorVika: rgba(21, 21, 21, 0.945);
-$colorMaxim: rgba(21, 21, 21, 0.945);
-$colorNatasha: rgba(21, 21, 21, 0.945);
+$colorDeveloper: rgb(14, 14, 14);
 
 %lips {
   position: absolute;
@@ -187,15 +185,11 @@ $colorNatasha: rgba(21, 21, 21, 0.945);
   @extend %girlsPosition;
   animation: walk-Natasha 5s linear infinite;
   .human {
-    background: $colorNatasha;
+    background: $colorDeveloper;
     height: 50px;
     z-index: 100;
     &:before {
-      background: $colorNatasha;
-    }
-    &:after {
-      content: '';
-      background: $colorNatasha;
+      background: $colorDeveloper;
     }
     .hat {
       @extend %hair;
@@ -216,10 +210,10 @@ $colorNatasha: rgba(21, 21, 21, 0.945);
   left: 150px;
   animation: walk-Natasha 3s linear infinite;
   .human {
-    background: $colorMaxim;
+    background: $colorDeveloper;
     height: 40px;
     &:before {
-      background: $colorMaxim;
+      background: $colorDeveloper;
     }
     &:after {
       border: 20px solid transparent;
@@ -258,15 +252,11 @@ $colorNatasha: rgba(21, 21, 21, 0.945);
   @extend %girlsPosition;
   animation: walk-Vika 5s linear infinite;
   .human {
-    background: $colorVika;
+    background: $colorDeveloper;
     height: 50px;
     z-index: 100;
     &:before {
-      background: $colorVika;
-    }
-    &:after {
-      content: '';
-      background: $colorVika;
+      background: $colorDeveloper;
     }
     .hat {
       @extend %hair;
@@ -381,10 +371,7 @@ $colorNatasha: rgba(21, 21, 21, 0.945);
     &:after {
       border: 20px solid transparent;
       border-top: 10px solid black;
-      content: '';
-      position: absolute;
       top: 39px;
-      width: 50px;
       height: 25px;
       border-radius: 10%;
       z-index: 100;
@@ -569,5 +556,102 @@ $colorNatasha: rgba(21, 21, 21, 0.945);
   }
 }
 
-.cards {
+#NatashaResp,
+#MaximResp,
+#VikaResp {
+  position: relative;
+  width: 50px;
+  height: 90px;
+  top: 0;
+  left: 0;
+  .human {
+    background: black;
+    height: 40px;
+    &:before {
+      background: black;
+    }
+    &:after {
+      border: 20px solid transparent;
+      border-top: 10px solid black;
+      content: '';
+      position: absolute;
+      top: 39px;
+      width: 50px;
+      height: 25px;
+      border-radius: 10%;
+      z-index: 100;
+    }
+    .mouse {
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      width: 15px;
+      height: 10px;
+      box-sizing: border-box;
+      clip: rect(5px, 15px, 10px, 0);
+      border: 5px solid rgb(212, 70, 70);
+      border-radius: 50%;
+    }
+    .eyes {
+      &.left {
+        z-index: 20;
+        left: 12px;
+      }
+      &.right {
+        z-index: 20;
+        left: 32px;
+      }
+    }
+  }
+  .arms {
+    &.left {
+      animation: none;
+    }
+    &.right {
+      animation: none;
+    }
+  }
+  .legs {
+    &.left {
+      animation: none;
+    }
+    &.right {
+      animation: none;
+    }
+  }
+  .hat {
+    @extend %hair;
+    z-index: 2;
+    left: -17px;
+  }
+  .bubble {
+    top: 1px;
+    left: 3px;
+  }
+  .smallBubble {
+    top: 1px;
+    left: 3px;
+  }
+}
+
+#NatashaResp,
+#MaximResp,
+#VikaResp {
+  .hat {
+    background: url(./icons/hat-Natasha.png) no-repeat center;
+  }
+}
+
+#MaximResp {
+  .hat {
+    top: -68px;
+    left: -20px;
+    background: url(./icons/hat-Maxim.png) no-repeat center;
+  }
+}
+
+#VikaResp {
+  .hat {
+    background: url(./icons/hat-Vika.png) no-repeat center;
+  }
 }
