--- a/src/pages/about-us/about.scss
+++ b/src/pages/about-us/about.scss
@@ -355,56 +355,6 @@ $colorDeveloper: rgb(14, 14, 14);
 
 //balls
 
-#rss-school {
-  position: relative;
-  width: 50px;
-  height: 90px;
-  top: 0;
-  left: 0;
-  animation: rss-School 3s linear infinite;
-  .human {
-    background: black;
-    height: 40px;
-    &:before {
-      background: black;
-    }
-    &:after {
-      border: 20px solid transparent;
-      border-top: 10px solid black;
-      top: 39px;
-      height: 25px;
-      border-radius: 10%;
-      z-index: 100;
-    }
-    .mouse {
-      position: absolute;
-      top: 10px;
-      left: 23px;
-      width: 15px;
-      height: 10px;
-      box-sizing: border-box;
-      clip: rect(5px, 15px, 10px, 0);
-      border: 5px solid rgb(212, 70, 70);
-      border-radius: 50%;
-    }
-  }
-}
-
-@keyframes rss-School {
-  25% {
-    transform: translate3d(0, 0, 0);
-  }
-  30% {
-    transform: translate3d(0, -10px, 0);
-  }
-  40% {
-    transform: translate3d(0, -25px, 0);
-  }
-  65% {
-    transform: translate3d(0, -35px, 0);
-  }
-}
-
 @keyframes boll {
   0% {
     transform: translate3d(0, 0, -2px);
@@ -431,12 +381,12 @@ $colorDeveloper: rgb(14, 14, 14);
   &:after {
     position: absolute;
     top: 54px;
-    left: 58px;
+    left: 60px;
     content: '';
     width: 0;
     height: 125px;
     border-left: 2px solid black;
-    transform: rotate(-25deg);
+    transform: rotate(-30deg);
   }
   &:before {
     content: '';
@@ -654,4 +604,14 @@ $colorDeveloper: rgb(14, 14, 14);
   .hat {
     background: url(./icons/hat-Vika.png) no-repeat center;
   }
+}
+
+.piramid {
+  position: relative;
+  left: -30px;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.719);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+  margin-bottom: 15px;
+  padding: 0 10px;
 }
