--- a/src/pages/about-us/about.scss
+++ b/src/pages/about-us/about.scss
@@ -512,7 +512,7 @@ $colorDeveloper: rgb(14, 14, 14);
   position: relative;
   width: 50px;
   height: 90px;
-  top: 0;
+  top: 3px;
   left: 0;
   .human {
     background: black;
@@ -614,4 +614,21 @@ $colorDeveloper: rgb(14, 14, 14);
   clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
   margin-bottom: 15px;
   padding: 0 10px;
+}
+
+.role {
+  border-top: 3px solid #000;
+  text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0, 0, 0, 0.1),
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3),
+    0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
 }
